Changed gateway name to PayU Romania

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "pay",
         "payment",
         "payu",
-        "purchase"
+        "purchase",
+        "romania"
     ],
     "homepage": "https://github.com/dantoma/omnipay-payu-romania",
     "license": "MIT",
